--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -79,7 +79,7 @@
       gap: 0.2rem;
     }
 
-    @media only screen and (max-width: 860px) {
+    @media only screen and (max-width: 1070px) {
       .buttonsBottomLeft {
         display: none;
       }
@@ -145,7 +145,7 @@
     <p>If you have any questions or concerns about this Privacy Policy, feel free to reach out by leaving an issue on the GitHub repository: <a href="https://github.com/yuckdevchan/snailsearch/issues/new">https://github.com/yuckdevchan/snailsearch/issues/new</a>.</p>
   </div>
   <div class="buttonsBottomLeft">
-    <div class="iconButton" onclick="window.open('/')">
+    <div class="iconButton" onclick="window.location.href='/'">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 12H5m0 0l6 6m-6-6l6-6"/></svg>
     </div>
     <div id="githubButton" class="iconButton" onclick="window.open('https://github.com/yuckdevchan/thebigbang', '_blank')">
